infrastructure/eks/manifests/alg.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: alg
  namespace: serves
  annotations:
    kubernetes.io/change-cause: "ALG deployment from Serves on $DATE"
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: alg
    spec:
      containers:
      - name: container-alg
        image: registry.gitlab.com/fluidsignal/serves/alg:master
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: gitlab-reg
---
apiVersion: v1
kind: Service
metadata:
  name: alg
  namespace: serves
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: alg
