infrastructure/eks/manifests/exams.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: exams
  namespace: serves
  annotations:
    kubernetes.io/change-cause: "Exams deployment from Serves on $DATE"
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: exams
    spec:
      containers:
      - name: container-exams
        image: registry.gitlab.com/fluidsignal/serves/exams:master
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: gitlab-reg
---
apiVersion: v1
kind: Service
metadata:
  name: exams
  namespace: serves
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: exams
