infrastructure/eks/manifests/integrates.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: integrates
  namespace: serves
  annotations:
    kubernetes.io/change-cause: "Integates deployment from Serves on $DATE"
spec:
  minReadySeconds: 15
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: integrates
    spec:
      containers:
      - name: container-integrates
        image: registry.gitlab.com/fluidsignal/integrates:master
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: gitlab-reg
---
apiVersion: v1
kind: Service
metadata:
  name: integrates
  namespace: serves
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: integrates
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: integrates-bot
  namespace: serves
  annotations:
    kubernetes.io/change-cause: "Integates Bot deployment from Serves on $DATE"
spec:
  minReadySeconds: 15
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: integrates-bot
    spec:
      containers:
      - name: container-integrates-bot
        image: registry.gitlab.com/fluidsignal/integrates/bot:master
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: gitlab-reg
---
apiVersion: v1
kind: Service
metadata:
  name: integrates-bot
  namespace: serves
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: integrates-bot
