infrastructure/eks/manifests/vpn.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: vpn
  namespace: serves
  annotations:
    kubernetes.io/change-cause: "VPN deployment from Serves on $DATE"
spec:
  minReadySeconds: 5
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: vpn
    spec:
      containers:
      - name: container-vpn
        image: registry.gitlab.com/fluidsignal/serves/vpn:master
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        securityContext:
          privileged: true
      imagePullSecrets:
      - name: gitlab-reg
---
apiVersion: v1
kind: Service
metadata:
  name: vpn
  namespace: serves
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: vpn
