infrastructure/eks/manifests/ingress-main-domains.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fluidattacks
  namespace: serves
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - fluidattacks.com
    secretName: fluidattacks-cert
  rules:
  - host: fluidattacks.com
    http:
      paths:
      - backend:
          serviceName: alg
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fluidla
  namespace: serves
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - fluid.la
    secretName: fluidla-cert
  rules:
  - host: fluid.la
    http:
      paths:
      - backend:
          serviceName: alg
          servicePort: 80
