infrastructure/eks/manifests/ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: serves
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/secure-backends: "true"
spec:
  tls:
  - hosts:
    - fluidattacks.com
    secretName: tls-fluidattacks
  rules:
  - host: fluidattacks.com
    http:
      paths:
      - backend:
          serviceName: alg
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress2
  namespace: serves
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/secure-backends: "true"
spec:
  tls:
  - hosts:
    - fluid.la
    secretName: tls-fluidla
  rules:
  - host: fluid.la
    http:
      paths:
      - backend:
          serviceName: alg
          servicePort: 80
