infrastructure/eks/manifests/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: isolate-prod
  namespace: serves
spec:
  podSelector: {}
  ingress:
    - from:
      - podSelector: {}
